# swamp-gameplay

./: .gitignore  README.md  deps.toml
.github/workflows/: build_linux.yml
src/: .gitignore  CMakeLists.txt
src/include/swamp-gameplay/: module.h
src/lib/: module.c
